--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@ b<!DOCTYPE html>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Beam me UP!</a></li>
-                        <li class="nav-item"><a class="nav-link" href="calendar.html">Catch Up</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">!Home!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">!About Me!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">!Beam me UP!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="calendar.html">!Catch Up!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +50,7 @@ b<!DOCTYPE html>
         <p>Today's song isn't inspired by anything actually, only because I dicovered<br>it today...Enjoy</p>
         <img src="norentals.jpg" alt="cover art for no rentals" class="main-image">
         <audio controls>
-            <source src="" type="audio/mpeg">
+            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Lil%20Rae%20-%20No%20Rentals%20(feat.%20Big%20Yavo)%20Lyrics.mp3" type="audio/mpeg">
         </audio>   
     </div>
 </div>
