--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
                 <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Beam Me UP!</a></li>
                 <li class="nav-item"><a class="nav-link" href="calendar.html">Catch Up</a></li>
+               <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
             </ul>
         </div>
     </div>
