--- a/feedback.html
+++ b/feedback.html
@@ -1,4 +1,23 @@
 <html>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Lesedii's Song of the Day</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="index.html">!Home!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">!About Me!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">!Beam me UP!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="calendar.html">!Catch Up!</a></li>
+                        <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+  
 <form action="thankyou.html">
 First name:<br>
   <input type="text name"=firstname><br>
