--- a/feedback.html
+++ b/feedback.html
@@ -27,7 +27,10 @@
             </div>
         </nav>
   
-<form action="thankyou.html">
+<form action="thankyou.html" method="get" target="blank" accept-charset="UTF-8"
+    enctype="application/x-www-form-urlencoded" autocomplete="off" novalidate>
+<fieldset>
+    <legend>Who are you?</legend>
 First name:<br>
   <input type="text name"=firstname><br>
 Last name:<br>
@@ -36,5 +39,7 @@ Last name:<br>
   <input type="radio" name="gender" value="female"> Female<br>
   <input type="radio" name="gender" value="other"> Other<br>
 <input type="submit" value="submit">
+</fieldset>
 </form>
+
 </html>
