--- a/calendar.html
+++ b/calendar.html
@@ -33,7 +33,7 @@
         <h2 class="month-header">February ▼</h2>
         <div class="month-content">
             <div class="calendar-grid">
-               
+            <div class="day-wrapper>">
                 <div class="day">
                     <p>15.02.2025</p>
                     <img src="Aaron.jpg" alt="Cover art for Aaron May's song 'In Love'" class="small-image">
@@ -41,6 +41,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Aaron%20May%20-%20In%20Love%20(Audio).mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>16.02.2025</p>
                     <img src="beyonce.jpeg" alt="cover art for fortunate carriages" class="small-image">
@@ -48,6 +50,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Beyonce%20&%20Maxwell%20-%20Fortunate%20Carriages%20(A%20JAYBeatz%20Mashup)%20%23HVLM.mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>17.02.2025</p>
                     <img src="lucki.png" alt="cover art for ofc you wont" class="small-image">
@@ -55,6 +59,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/LUCKI%20-%20OF%20COURSE%20YOU%20WON%E2%80%99T%20%5BaEYCWPcpEys%5D.mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>18.02.2025</p>
                     <img src="emph4sis.jpeg" alt="cover art for do it" class="small-image">
@@ -62,6 +68,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Do%20it.mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>19.02.2025</p>
                     <img src="DBD bash.jpeg" alt="cover art for darkest before dawn" class="small-image">
@@ -69,6 +77,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bashfortheworld%20-%20Darkest%20before%20Dawn.mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>20.02.2025</p>
                     <img src="el manana.jpeg" alt="cover art for el manana" class="small-image">
@@ -76,6 +86,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Gorillaz%20-%20El%20Ma%C3%B1ana%20(Official%20Video).mp3" type="audio/mpeg">
                     </audio>   
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>21.02.2025</p>
                     <img src="autumn.jpeg" alt="cover art for uptown coolin" class="small-image">
@@ -83,6 +95,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Uptown%20Coolin!%20-%20Autumn!%20(Lyrics).mp3" type="audio/mpeg">
                     </audio> 
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>22.02.2025</p>
                     <img src="nasa.jpeg" alt="cover art for nasa" class="small-image">
@@ -90,6 +104,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Rvdical%20The%20Kid%20-%20NASA%20ft.%20Amaarae%20(AUDIO).mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>23.02.2025</p>
                     <img src="offshore.jpeg" alt="cover art for touchin the ceiling" class="small-image">
@@ -97,6 +113,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Touchin%20The%20Ceiling.mp3" type="audio/mpeg">
                     </audio>
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>24.02.2025</p>
                      <img src="saba.jpeg" alt="cover art for how to impress God" class="small-image">
@@ -104,6 +122,8 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Saba%20&%20No%20ID%20-%20How%20to%20Impress%20God.mp3" type="audio/mpeg">
                      </audio> 
                 </div>
+             </div>
+             <div class="day-wrapper>">
                 <div class="day">
                     <p>25.02.2025-13.03.2025</p>
                     <img src="Tyler.jpeg" alt="cover art for thought I was dead" class="small-image">
@@ -111,6 +131,7 @@
                         <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Tyler,%20The%20Creator%20-%20Thought%20I%20Was%20Dead%20(Lyrics%20Video)%20ft.%20ScHoolboy%20Q,%20Santigold.mp3" type="audio/mpeg">
                     </audio>  
                 </div>
+             </div>
             
             </div>
         </div>
