--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>Today's song isn't inspired by anything actually, only because I dicovered<br>it today...Enjoy</p>
-        <img src="norentals.jpg" alt="cover art for no rentals" class="main-image">
+        <p>This song was suggested by one of my classmates<br>I did have a song in mind, but I ended<br>up forgetting it...I hope you'll enjoy it<br>as much as he does...</up></p>
+        <img src="guilty.jpg" alt="cover art for guilty" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Lil%20Rae%20-%20No%20Rentals%20(feat.%20Big%20Yavo)%20Lyrics.mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -59,6 +59,14 @@
     
 <div class="song-log">
 
+        <div class="song-entry">
+            <h4>20.03.2025</h4>
+            <img src="norentals.jpg" alt="cover art for no rentals" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Lil%20Rae%20-%20No%20Rentals%20(feat.%20Big%20Yavo)%20Lyrics.mp3" type="audio/mpeg">
+            </audio>  
+        </div>
+    
         <div class="song-entry">
             <h4>19.03.2025</h4>
             <img src="vince staples.jpg" alt="cover art for aye" class="small-image">
