--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <div class="todays-song">
     <div>
         <h4>TODAY'S SONG</h4>
-        <p>This song was suggested by one of my classmates<br>I did have a song in mind, but I ended<br>up forgetting it...I hope you'll enjoy it<br>as much as he does...</up></p>
-        <img src="guilty.jpg" alt="cover art for guilty" class="main-image">
+        <p>I put my nigga on this song this past weekend and this man had the NERVE<br>to dive deeper into Lil Rae and find songs that I don't even<br>know!!! How I put him on...and he finding songs before ME!?<br> eitherway, enjoy this gem, with love <3</p>
+        <img src="miya.jpg" alt="cover art for miya miya" class="main-image">
         <audio controls>
-            <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Guilty%20(feat.%20Leon%20Thomas).mp3" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>   
     </div>
 </div>
@@ -59,6 +59,14 @@
     
 <div class="song-log">
 
+        <div class="song-entry">
+            <h4>21.03.2025-23.03.2025</h4>
+            <img src="guilty.jpg" alt="cover art for guilty" class="small-image">
+            <audio controls>
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Guilty%20(feat.%20Leon%20Thomas).mp3" type="audio/mpeg">
+            </audio>
+        </div>
+    
         <div class="song-entry">
             <h4>20.03.2025</h4>
             <img src="norentals.jpg" alt="cover art for no rentals" class="small-image">
