--- a/feedback.html
+++ b/feedback.html
@@ -1,45 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reactions</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reactions</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">Lesedii's Song of the Day</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html">!Home!</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">!About Me!</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">!Beam me UP!</a></li>
-                        <li class="nav-item"><a class="nav-link" href="calendar.html">!Catch Up!</a></li>
-                        <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-  
-<form action="thankyou.html" method="get" target="blank" accept-charset="UTF-8"
-    enctype="application/x-www-form-urlencoded" autocomplete="off" novalidate>
-<fieldset>
-    <legend>Who are you?</legend>
-First name:<br>
-  <input type="text name"=firstname><br>
-Last name:<br>
-  <input type="text"=lastname><br>
-  <input type="radio" name="gender" value="male" checked> Male<br>
-  <input type="radio" name="gender" value="female"> Female<br>
-  <input type="radio" name="gender" value="other"> Other<br>
-<input type="submit" value="submit">
-</fieldset>
-</form>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Lesedii's Song of the Day</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">!Home!</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">!About Me!</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">!Beam me UP!</a></li>
+          <li class="nav-item"><a class="nav-link" href="calendar.html">!Catch Up!</a></li>
+          <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <form action="mailto:hellolesedii@outlook.com?subject=Feedback Submission" method="POST" enctype="text/plain">
+      <fieldset class="mb-4">
+        <legend>Who are you?</legend>
+        <div class="mb-3">
+          <label class="form-label">First name:</label>
+          <input type="text" class="form-control" name="firstname" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Last name:</label>
+          <input type="text" class="form-control" name="lastname" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Gender:</label><br>
+          <input type="radio" name="gender" value="male" checked> Male<br>
+          <input type="radio" name="gender" value="female"> Female<br>
+          <input type="radio" name="gender" value="other"> Other<br>
+        </div>
+      </fieldset>
+
+      <fieldset class="mb-4">
+        <legend>Lemme peep yo mind</legend>
+        <div class="mb-3">
+          <label class="form-label">Message:</label>
+          <textarea class="form-control" name="feedback" rows="4" placeholder="Talk to me..."></textarea>
+        </div>
+      </fieldset>
+
+      <fieldset class="mb-4">
+        <legend>Did you like Today's song?</legend>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="vote" value="wack">
+          <label class="form-check-label">Wack</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="vote" value="mid">
+          <label class="form-check-label">Mid</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="vote" value="fye">
+          <label class="form-check-label">Fye</label>
+        </div>
+      </fieldset>
+
+      <fieldset class="mb-4">
+        <legend>What's your song of the day?</legend>
+        <div class="mb-3">
+          <input type="text" class="form-control" name="song_suggestion" placeholder="song suggestion??">
+        </div>
+      </fieldset>
+
+      <input type="submit" value="Submit" class="btn btn-primary" formaction="thankyou.html">
+    </form>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
 </html>
