--- a/feedback.html
+++ b/feedback.html
@@ -29,7 +29,7 @@
   </nav>
 
   <div class="container">
-    <form action="mailto:hellolesedii@outlook.com?subject=Feedback Submission" method="POST" enctype="text/plain">
+    <form action="mailto:hellolesedii@outlook.com?subject=Feedback Submission" method="GET" enctype="text/plain">
       <fieldset class="mb-4">
         <legend>Who are you?</legend>
         <div class="mb-3">
