--- a/feedback.html
+++ b/feedback.html
@@ -30,7 +30,7 @@
 
   <div class="container">
     <form action="https://formsubmit.co/hellolesedii@outlook.com" method="POST">
-      <input type="hidden" name="_next" value="thankyou.html">
+      <input type="hidden" name="_next" value="https://bida24-087.github.io/my-song-of-the-day/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
 
       <fieldset class="mb-4">
