--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Ska ba mad at me......i know...daily updates and stuff...<br>System e ntse ele down..ka nako eo ke raya emotional system<br>Todays song wasnt inspired by anything fr fr just that i heard it and cheesed<br>Blanco cant miss with this fr<br>Its been on repeat for the past 20 minutes!!</p>
             <img src="blanco.jpeg" alt="cover art for love you alot" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="" type="audio/mpeg">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/%E1%90%B83%20U%20A%20LOT%20(feat.%20NEMP).mp3" type="audio/mpeg">
             </audio>   
         </div>
     </div>
