--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="todays-song p-4 rounded">
         <div>
             <h4>TODAY'S SONG</h4>
-            <p>Ska ba mad at me......i know...daily updates and stuff...<br>System e ntse ele down..ka nako eo ke raya emotional system<br>Todays song wasnt inspired by anything fr fr just that i heard it and cheesed<br>Blanco cant miss with this fr<br>Its been on repeat for the past 20 minutes!!</p>
-            <img src="blanco.jpeg" alt="cover art for love you alot" class="main-image img-fluid rounded">
+            <p>heela wena!<br>Have you ever been scared shitless?<br>that was me and commitment<br>imagine my boy trying his best to reassure me with everything he can<br>this song is from him<br>I love you Letso</p>
+            <img src="skydive.jpeg" alt="cover art for skydive" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/%E1%90%B83%20U%20A%20LOT%20(feat.%20NEMP).mp3" type="audio/mpeg">
+                <source src="" type="audio/mpeg">
             </audio>   
         </div>
     </div>
@@ -65,6 +65,16 @@
 <div class="container">
     
     <div class="row g-3 justify-content-center">
+
+        <div class="song-entry">    
+           <div class="col-6 col-md-4 col-lg-3 text-center">     
+                <h4>11.04.2025</h4>
+                <img src="blanco.jpeg" alt="cover art for love you alot" class="small-image img-fluid rounded">
+                <audio controls class="mt-2 w-100">
+                    <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/%E1%90%B83%20U%20A%20LOT%20(feat.%20NEMP).mp3" type="audio/mpeg">
+                </audio> 
+            </div>
+        </div>
 
         <div class="song-entry">    
            <div class="col-6 col-md-4 col-lg-3 text-center">     
