--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>heela wena!<br>Have you ever been scared shitless?<br>that was me and commitment<br>imagine my boy trying his best to reassure me with everything he can<br>this song is from him<br>I love you Letso</p>
             <img src="skydive.jpeg" alt="cover art for skydive" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="" type="audio/mpeg">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Boogie%20-%20Skydive%20%5BAudio%5D.mp3" type="audio/mpeg">
             </audio>   
         </div>
     </div>
