--- a/thankyou.html
+++ b/thankyou.html
@@ -3,6 +3,7 @@
   <body class="thank-you">
 
   <p>baya dah danki bruh</p>
+  <p>chill at the reply box dehh, Ima talk to you soon</p>
 
   </body>
     
