--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="todays-song p-4 rounded">
         <div>
             <h4>TODAY'S SONG</h4>
-            <p>heela wena!<br>Have you ever been scared shitless?<br>that was me and commitment<br>imagine my boy trying his best to reassure me with everything he can<br>this song is from him<br>I love you Letso</p>
-            <img src="skydive.jpeg" alt="cover art for skydive" class="main-image img-fluid rounded">
+            <p>Todays song has no inspiration....<br>its just genuinely a good song about a man and his bank roll</p>
+            <img src="diamond.jpeg" alt="cover art for diamond dust" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Boogie%20-%20Skydive%20%5BAudio%5D.mp3" type="audio/mpeg">
+                <source src="" type="audio/mpeg">
             </audio>   
         </div>
     </div>
@@ -65,6 +65,14 @@
 <div class="container">
     
     <div class="song-grid">
+
+        <div class="song-entry text-center">
+            <h4>12.04.2025</h4>
+            <img src="skydive.jpeg" alt="cover art for skydive" class="small-image img-fluid rounded">
+            <audio controls class="mt-2 w-100">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Boogie%20-%20Skydive%20%5BAudio%5D.mp3" type="audio/mpeg">
+            </audio> 
+        </div>
 
         <div class="song-entry text-center">        
                 <h4>11.04.2025</h4>
