--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Todays song has no inspiration....<br>its just genuinely a good song about a man and his bank roll</p>
             <img src="diamond.jpeg" alt="cover art for diamond dust" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="" type="audio/mpeg">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/A$AP%20Ant%20Diamond%20Dust%20(WSHH%20Exclusive%20-%20Official%20Music%20Video).mp3" type="audio/mpeg">
             </audio>   
         </div>
     </div>
