--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,9 @@
 <html>
-
+<head>
+  <title>Danki</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+  
   <body class="thank-you">
 
   <p>baya dah danki bruh</p>
