--- a/thankyou.html
+++ b/thankyou.html
@@ -1,15 +1,38 @@
 <html>
 <head>
   <title>Danki</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
   
-  <body class="thank-you">
+<body class="thank-you">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Lesedii's Song of the Day</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Beam Me UP!</a></li>
+                <li class="nav-item"><a class="nav-link" href="calendar.html">Catch Up</a></li>
+                <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
   <p>baya dah danki bruh</p>
   <p>chill at the reply box dehh, Ima talk to you soon</p>
 
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    
+</body>
     
 </html>
 
