--- a/calendar.html
+++ b/calendar.html
@@ -41,7 +41,7 @@
                 <div class="day">        
                 <p>23.03.2025-11.04.2025</p>
                 <img src="miya.jpg" alt="cover art for miya miya" class="small-image">
-                <audio controls">
+                <audio controls>
                     <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Miya%20Miya%20(feat.%20Lil%20Rae).mp3" type="audio/mpeg">
                 </audio> 
                 </div>
@@ -51,7 +51,7 @@
                 <div class="day">      
                 <p>21.03.2025-23.03.2025</p>
                 <img src="guilty.jpg" alt="cover art for guilty" class="small-image">
-                <audio controls">
+                <audio controls>
                     <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Guilty%20(feat.%20Leon%20Thomas).mp3" type="audio/mpeg">
                 </audio>
                 </div>
@@ -61,7 +61,7 @@
                 <div class="day">
                 <p>20.03.2025</p>
                 <img src="norentals.jpg" alt="cover art for no rentals" class="small-image">
-                <audio controls">
+                <audio controls>
                     <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Lil%20Rae%20-%20No%20Rentals%20(feat.%20Big%20Yavo)%20Lyrics.mp3" type="audio/mpeg">
                 </audio>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="day">            
                 <p>19.03.2025</p>
                 <img src="vince staples.jpg" alt="cover art for aye" class="small-image">
-                <audio controls">
+                <audio controls>
                     <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Aye%20(Free%20The%20Homies)%20-%20Vince%20Staples.mp3" type="audio/mpeg">
                 </audio>  
                 </div>
@@ -81,7 +81,7 @@
                 <div class="day">
                 <p>18.03.2025</p>
                  <img src="charge it.jpg" alt="cover art for charge it" class="small-image">
-                 <audio controls">
+                 <audio controls>
                     <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/ENNY%20-%20Charge%20It%20Remix%20(ft.%20Smino)%20%5BAnime%20Visualizer%5D.mp3" type="audio/mpeg">
                  </audio> 
                 </div>
@@ -91,7 +91,7 @@
                 <div class="day">
                 <p>13.03.2025-17.03.2025</p>
                 <img src="mood.jpeg" alt="cover art for mood" class="small-image">
-                <audio controls">
+                <audio controls>
                     <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jessie%20Reyez%20-%20Mood%20(lyrics).mp3" type="audio/mpeg">
                 </audio>
                 </div>
