--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="todays-song p-4 rounded">
         <div>
             <h4>TODAY'S SONG</h4>
-            <p>Todays song has no inspiration....<br>its just genuinely a good song about a man and his bank roll</p>
-            <img src="diamond.jpeg" alt="cover art for diamond dust" class="main-image img-fluid rounded">
+            <p>These past couple days have been testing and trying<br>but I can guarantee that this song would make a soldier<br>reflect on his pain<br>Its beautiful </p>
+            <img src="bazzi.jpg" alt="cover art for conversations" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/A$AP%20Ant%20Diamond%20Dust%20(WSHH%20Exclusive%20-%20Official%20Music%20Video).mp3" type="audio/mpeg">
+                <source src="" type="audio/mpeg">
             </audio>   
         </div>
     </div>
@@ -65,6 +65,14 @@
 <div class="container">
     
     <div class="song-grid">
+
+        <div class="song-entry text-center">
+            <h4>13.04.2025-18.04.2025</h4>
+            <img src="diamond.jpeg" alt="cover art for diamond dust" class="small-image img-fluid rounded">
+            <audio controls class="mt-2 w-100">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/A$AP%20Ant%20Diamond%20Dust%20(WSHH%20Exclusive%20-%20Official%20Music%20Video).mp3" type="audio/mpeg">
+            </audio>
+        </div>
 
         <div class="song-entry text-center">
             <h4>12.04.2025</h4>
