--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>These past couple days have been testing and trying<br>but I can guarantee that this song would make a soldier<br>reflect on his pain<br>Its beautiful </p>
             <img src="bazzi.jpg" alt="cover art for conversations" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="" type="audio/mpeg">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bazzi%20-%20Conversations%20With%20Myself%20%5BOfficial%20Audio%5D.mp3" type="audio/mpeg">
             </audio>   
         </div>
     </div>
