--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="todays-song p-4 rounded">
         <div>
             <h4>TODAY'S SONG</h4>
-            <p>These past couple days have been testing and trying<br>but I can guarantee that this song would make a soldier<br>reflect on his pain<br>Its beautiful </p>
-            <img src="bazzi.jpg" alt="cover art for conversations" class="main-image img-fluid rounded">
+            <p>Today had no specific emotion, vibe nor<br> drive, so instead I chose my heart<br>and it led me straight to my go to artist<br>YES- it's JADEN</p>
+            <img src="everything.jpeg" alt="cover art for everything" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bazzi%20-%20Conversations%20With%20Myself%20%5BOfficial%20Audio%5D.mp3" type="audio/mpeg">
+                <source src="" type="audio/mpeg">
             </audio>   
         </div>
     </div>
@@ -65,6 +65,14 @@
 <div class="container">
     
     <div class="song-grid">
+
+        <div class="song-entry text-center">
+            <h4>18.04.2025-20.04.2025</h4>
+            <img src="bazzi.jpg" alt="cover art for conversations" class="small-image img-fluid rounded">
+            <audio controls class="mt-2 w-100">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Bazzi%20-%20Conversations%20With%20Myself%20%5BOfficial%20Audio%5D.mp3" type="audio/mpeg">
+            </audio>   
+        </div>
 
         <div class="song-entry text-center">
             <h4>13.04.2025-18.04.2025</h4>
