--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div class="todays-song p-4 rounded">
         <div>
             <h4>TODAY'S SONG</h4>
-            <p>Today had no specific emotion, vibe nor<br> drive, so instead I chose my heart<br>and it led me straight to my go to artist<br>YES- it's JADEN</p>
-            <img src="everything.jpeg" alt="cover art for everything" class="main-image img-fluid rounded">
+            <p>Todays song was mainly inspired by the second half of the song<br>when SZA hopped on and harmonized with Travis yeah...<br>that's the part!<br>SZA and Travis for the win</p>
+            <img src="alright.jpeg" alt="cover art for alright" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jaden%20-%20Everything%20(Official%20Visualizer).mp3" type="audio/mpeg">
+                <source src="" type="audio/mpeg">
             </audio>   
         </div>
     </div>
@@ -65,6 +65,14 @@
 <div class="container">
     
     <div class="song-grid">
+
+         <div class="song-entry text-center">
+             <h4>21.04.2025-27.04.2025</h4>
+             <img src="everything.jpeg" alt="cover art for everything" class="main-image img-fluid rounded">
+             <audio controls class="mt-2 w-100">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jaden%20-%20Everything%20(Official%20Visualizer).mp3" type="audio/mpeg">
+             </audio>
+         </div>
 
         <div class="song-entry text-center">
             <h4>18.04.2025-20.04.2025</h4>
