--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Todays song was mainly inspired by the second half of the song<br>when SZA hopped on and harmonized with Travis yeah...<br>that's the part!<br>SZA and Travis for the win</p>
             <img src="alright.jpeg" alt="cover art for alright" class="main-image img-fluid rounded">
             <audio controls class="mt-2 w-100">
-                <source src="" type="audio/mpeg">
+                <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Travis%20Scott%20-%20Ok%20Alright%20(feat.%20ScHoolboy%20Q).mp3" type="audio/mpeg">
             </audio>   
         </div>
     </div>
