--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
          <div class="song-entry text-center">
              <h4>21.04.2025-27.04.2025</h4>
-             <img src="everything.jpeg" alt="cover art for everything" class="main-image img-fluid rounded">
+             <img src="everything.jpeg" alt="cover art for everything" class="small-image img-fluid rounded">
              <audio controls class="mt-2 w-100">
                 <source src="https://github.com/bida24-087/my-song-of-the-day/raw/refs/heads/main/Jaden%20-%20Everything%20(Official%20Visualizer).mp3" type="audio/mpeg">
              </audio>
