--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Beam Me UP!</a></li>
-                <li class="nav-item"><a class="nav-link" href="calendar.html">Catch Up</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">!Home!</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">!About Me!</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">!Beam Me UP!</a></li>
+                <li class="nav-item"><a class="nav-link" href="calendar.html">!Catch Up!</a></li>
                 <li class="nav-item"><a class="nav-link" href="feedback.html">!Reactions?</a></li>
             </ul>
         </div>
