--- a/feedback.html
+++ b/feedback.html
@@ -97,5 +97,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
-
+<footer>
+    
+    <p>&copy; 2025 HiLesedii</p>
+    
+</footer>
 </html>
